[tool.poetry]
name = "skrf-deembedding"
version = "0.1.0"
description = ""
authors = ["Alexandre Ahizoune <fournier.afa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-rf = "^0.32.0"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
